--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     .wrap {
       display: flex;
       flex-wrap: wrap;
-      justify-content: space-around;
+      justify-content: space-between;
       padding: .15rem;
     }
 
@@ -27,6 +27,7 @@
       font-size: .15rem;
       text-align: center;
       margin-bottom: .15rem;
+      padding: 0 .15rem;
       background: -webkit-linear-gradient(#4f34dd, #9f96f4); /* Safari 5.1 - 6.0 */
       background: -o-linear-gradient(#4f34dd, #9f96f4); /* Opera 11.1 - 12.0 */
       background: -moz-linear-gradient(#4f34dd, #9f96f4); /* Firefox 3.6 - 15 */
@@ -37,6 +38,7 @@
 <body>
 <div class="wrap">
   <a href="./view/article-index.html">文章首页</a>
+  <a href="./view/article-index-ajax.html">文章首页模拟加载版本</a>
   <a href="./view/article-detail.html">文章详情</a>
   <a href="./view/brand-index.html">品牌首页</a>
   <a href="./view/brand-list.html">品牌二级页</a>
