--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     a {
       height: .4rem;
       line-height: .4rem;
-      width: 30%;
+      min-width: 30%;
       color: white;
       border-radius: .05rem;
       font-size: .15rem;
