--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
   <a href="./view/brand-index.html">品牌首页</a>
   <a href="./view/brand-list.html">品牌二级页</a>
   <a href="./view/brand-shop.html">品牌详情</a>
+  <a href="./school-website/moblie/index.html">龙岩技师学院官网mobile</a>
+  <a href="./school-website/web/index.html">龙岩技师学院官网pc</a>
 </div>
 </body>
 </html>
