--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 <body>
 <div class="wrap">
   <a href="https://www.cnblogs.com/ldj3/p/9172804.html">git常用命令</a>
-  <a href="./view/article-index.html">文章首页</a>
-  <a href="./view/article-index-ajax.html">文章首页模拟加载版本</a>
-  <a href="./view/article-detail.html">文章详情</a>
-  <a href="./view/brand-index.html">品牌首页</a>
-  <a href="./view/brand-list.html">品牌二级页</a>
-  <a href="./view/brand-shop.html">品牌详情</a>
+  <a href="./shop/view/article-index.html">文章首页</a>
+  <a href="./shop/view/article-index-ajax.html">文章首页模拟加载版本</a>
+  <a href="./shop/view/article-detail.html">文章详情</a>
+  <a href="./shop/view/brand-index.html">品牌首页</a>
+  <a href="./shop/view/brand-list.html">品牌二级页</a>
+  <a href="./shop/view/brand-shop.html">品牌详情</a>
   <a href="./school-website/moblie/index.html">龙岩技师学院官网mobile</a>
   <a href="./school-website/web/index.html">龙岩技师学院官网pc</a>
 </div>
