--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="keywords" content="填写网页搜索关键词"/>
   <meta name="author" content="作者">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0,maximum-scale=1.0, user-scalable=0"/>
-  <script src="./js/rem.js"></script>
-  <link rel="stylesheet" href="./css/base.css">
+  <script src="./shop/js/rem.js"></script>
+  <link rel="stylesheet" href="./shop/css/base.css">
   <style>
     .wrap {
       display: flex;
