--- a/school-website/moblie/index.html
+++ b/school-website/moblie/index.html
@@ -171,15 +171,15 @@
     <h2>祝福寄语</h2>
   </div>
   <div class="k-wish">
-    <a href="school-info.html" class="k-wish-row">
+    <a class="k-wish-row">
       <p class="k-overflow">建校40周年丨厦门校友心系母校建言献策，凝心聚...</p>
       <p class="k-color-grey">2019-07-31</p>
     </a>
-    <a href="school-info.html" class="k-wish-row">
+    <a class="k-wish-row">
       <p class="k-overflow">建校40周年丨厦门校友心系母校建言献策，凝心聚...</p>
       <p class="k-color-grey">2019-07-31</p>
     </a>
-    <a href="school-info.html" class="k-wish-row">
+    <a class="k-wish-row">
       <p class="k-overflow">建校40周年丨厦门校友心系母校建言献策，凝心聚...</p>
       <p class="k-color-grey">2019-07-31</p>
     </a>
