--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
   <a href="./shop/view/brand-shop.html">品牌详情</a>
   <a href="./school-website/moblie/index.html">龙岩技师学院官网mobile</a>
   <a href="./school-website/web/index.html">龙岩技师学院官网pc</a>
+  <a href="./cosmety/view/index.html">美容培训机构首页</a>
 </div>
 </body>
 </html>
