--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
   <a href="./school-website/moblie/index.html">龙岩技师学院官网mobile</a>
   <a href="./school-website/web/index.html">龙岩技师学院官网pc</a>
   <a href="./cosmety/view/index.html">美容培训机构首页</a>
+  <a href="./blob/pc/index.html">博客首页</a>
+  <a href="./blob/admin/index.html">博客后台</a>
 </div>
 </body>
 </html>
